# oc_rs

./: .gitignore  Cargo.toml  Justfile  README.md
.cargo/: config.toml
oc-rs-cli/: Cargo.toml
oc-rs-cli/src/: main.rs
oc-rs/src/: lib.rs  util.rs
oc-rs/src/rpc_device/: device_bus.rs  file_import_export_card.rs  redstone_interface.rs  sound_card.rs
src/: util.rs
src/rpc_device/: computer.rs  device_bus.rs  mod.rs  redstone_interface.rs
