[package]
name = "oc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.tml
[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde"] }
epoll-rs = "0.2.1"

[features]

devices = [
    "redstone_interface",
    "sound_card",
    "computer",
]

redstone_interface = [
    "sides"
]

sound_card = []

computer = [
    "item"
]

sides = []

item = []

pretty_print = []
