[package]
name = "oc_rs_cli"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
oc_rs = { path = "../oc-rs", features = ["pretty_print", "redstone_interface", "sound_card", "computer", "file_transfer"] }
serde_json = "1.0.79"
